# spe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  README.md  audit.toml  deny.toml  engsp9lagkjtickkq8odh01urjuicpjt.darc  kvfrjenuaflqn3oqnpue3li25ohjcckm.darc  manifest  smmtfudi5hilmaddamne0b65sqticdmb  sonar-project.properties
.beads/: .beads-credential-key  metadata.json
.beads/hooks/: pre-commit
.claude/: settings.json
.claude/agents/: coderabbit-reviewer.md  pr-creator.md  pr-merger.md
.claude/commands/: bootstrap.md  pr.md  record-decision.md  test.md
.claude/rules/: debugging.md  decision-recording.md  git-workflow.md  tdd.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml  semgrep.yml  sonarqube.yml
docs/: architecture.md  code-style-guide.md  decision-recording.md  screenshot-tool.md  tech-stack-docs.md
docs/adr/: 001-language-selection.md  002-gui-framework.md  003-pdf-libraries.md  004-system-utility-integration.md  005-testing-strategy.md  006-security-review-system.md  007-sbom-and-supply-chain-scanning.md  008-ci-pipeline-parallelization.md  009-canvas-widget-approach.md  010-dual-canvas-stack-z-ordering.md  011-font-embedding-approach.md  README.md
docs/decisions/: README.md  async-rendering-with-prerender.md  branch-naming.md  ci-pipeline.md  code-style-and-linting.md  drag-state-in-program-state.md  (+13 more)
scripts/: screenshot.sh
src/: app.rs  command.rs  config.rs  coordinate.rs  fonts.rs  ipc.rs  lib.rs  main.rs  overlay.rs
tests/: e2e.rs  font_discovery.rs  ipc_e2e.rs  pdf_rendering.rs  pdf_writing.rs
(+51 files in other folders)
