[package]
name = "spe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iced = { version = "0.14", features = ["image", "canvas", "tokio"] }
lopdf = "0.40"
rfd = "0.17"
image = "0.25"
thiserror = "2"
tempfile = "3"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
iced_test = "0.14"

[profile.dev.package."*"]
opt-level = 2
